Stackoverflow.com-related fixes
Stackoverflow surfaced a few bugs;

1. For some unknown reason it measures the em value of a single
character as having something like 10,000 pixels width. So for now I'm
just hardcoding the standard measurement of 9x15 for unreasonably large
widths.

2. Its cookie banner used `position: fixed !important`, so needed to
update the sticky fix code in case other sites do the same.

3. The cookie banner with the aplied sticky fix meant that the div just
sat staticlly in the middle of the DOM obscuring other text. So I
started a list of site-specific CSS specifics.

--- a/webext/assets/styles.css
+++ b/webext/assets/styles.css
@@ -44,3 +44,13 @@ sup, sub {
 input, textarea {
   color: transparent !important;
 }
+
+/**
+ * Site-specific fixes
+ *
+ * TODO: This is going to need to be much more formally organised
+ */
+/* Stackoverflow cookie banner */
+#js-gdpr-consent-banner {
+  display: none;
+}
